Fix vh on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -145,6 +145,7 @@ main {
 #home {
   position: relative;
   height: 100vh;
+  min-height: -webkit-fill-available;
 }
 
 #home .container {
